--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,9 @@ a {
     text-decoration: none;
     color: var(--primary-color);
 }
+h2 {
+    margin: 0;
+}
 
 h1, h2 ,p, article {
     cursor: default;
